Science Robotics May 2022

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -94560,13 +94560,6 @@
   howpublished = {arXiv 2020}
 }
 
-@book{pml1Book,
-  title =        {{Probabilistic Machine Learning: An introduction}},
-  author =       {Kevin P. Murphy},
-  year =         2021,
-  publisher =    {MIT Press},
-  url =          {http://mlbayes.ai}
-}
 
 @book{turner19:RobotRules,
   title =        {{Robot Rules - Regulating Artificial Intelligence}},
@@ -95953,16 +95946,6 @@
   address =      {Los Angeles, CA}
 }
 
-@article{kolve2017ai2,
-  title =        {{AI2-THOR}: An interactive 3d environment for visual
-                  ai},
-  author =       {Kolve, Eric and Mottaghi, Roozbeh and Han, Winson
-                  and VanderBilt, Eli and Weihs, Luca and Herrasti,
-                  Alvaro and Gordon, Daniel and Zhu, Yuke and Gupta,
-                  Abhinav and Farhadi, Ali},
-  journal =      {arXiv preprint arXiv:1712.05474},
-  year =         {2017}
-}
 
 @inproceedings{song2019apollocar3d,
   title =        {Apollocar3d: A large 3d car instance understanding
@@ -96554,4 +96537,117 @@
   publisher       = {arXiv},
   year            = 2022,
   copyright       = {arXiv.org perpetual, non-exclusive license}
+}
+
+@book{pml1Book,
+  author          = "Kevin P. Murphy",
+  title           = "Probabilistic Machine Learning: An introduction",
+  publisher       = "MIT Press",
+  year            = 2022,
+  url             = "probml.ai"
+}
+
+@article{DBLP:journals/corr/abs-2004-11757,
+  author          = {Zequn Qin and Huanyu Wang and Xi Li},
+  title           = {Ultra Fast Structure-aware Deep Lane Detection},
+  journal         = {CoRR},
+  volume          = {abs/2004.11757},
+  year            = {2020},
+  url             = {https://arxiv.org/abs/2004.11757},
+  eprinttype      = {arXiv},
+  eprint          = {2004.11757},
+  timestamp       = {Tue, 28 Apr 2020 16:10:02 +0200},
+  biburl          = {https://dblp.org/rec/journals/corr/abs-2004-11757.bib},
+  bibsource       = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2001-03343,
+  author          = {Peixuan Li and Huaici Zhao and Pengfei Liu and Feidao Cao},
+  title           = {{RTM3D:} Real-time Monocular 3D Detection from Object
+                  Keypoints for Autonomous Driving},
+  journal         = {CoRR},
+  volume          = {abs/2001.03343},
+  year            = {2020},
+  url             = {https://arxiv.org/abs/2001.03343},
+  eprinttype      = {arXiv},
+  eprint          = {2001.03343},
+  timestamp       = {Fri, 17 Jan 2020 14:07:30 +0100},
+  biburl          = {https://dblp.org/rec/journals/corr/abs-2001-03343.bib},
+  bibsource       = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1802-03515,
+  author          = {Wenhao Ding and Shuaijun Li and Guilin Zhang and Xiangyu
+                  Lei and Huihuan Qian and Yangsheng Xu},
+  title           = {Vehicle Three-Dimensional Pose and Shape Estimation from
+                  Multiple Monocular Vision},
+  journal         = {CoRR},
+  volume          = {abs/1802.03515},
+  year            = {2018},
+  url             = {http://arxiv.org/abs/1802.03515},
+  eprinttype      = {arXiv},
+  eprint          = {1802.03515},
+  timestamp       = {Mon, 13 Aug 2018 16:48:41 +0200},
+  biburl          = {https://dblp.org/rec/journals/corr/abs-1802-03515.bib},
+  bibsource       = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{Wang_2019_CVPR,
+  author          = {Wang, He and Sridhar, Srinath and Huang, Jingwei and
+                  Valentin, Julien and Song, Shuran and Guibas, Leonidas J.},
+  title           = {Normalized Object Coordinate Space for Category-Level 6D
+                  Object Pose and Size Estimation},
+  booktitle       = {The IEEE Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  month           = {June},
+  year            = 2019
+}
+
+@inproceedings{mozos2007labels,
+  title           = {From labels to semantics: An integrated system for
+                  conceptual spatial representations of indoor environments for
+                  mobile robots},
+  author          = {Mozos, Oscar Mart{\i}nez and Jensfelt, Patric and Zender,
+                  Hendrik and Kruijff, Geert-Jan M and Burgard, Wolfram},
+  booktitle       = {ICRA Workshop: Semantic Information in Robotics},
+  year            = {2007},
+  organization    = {Citeseer}
+}
+
+@article{ros2,
+  author          = {Steven Macenski and Tully Foote and Brian Gerkey and Chris
+                  Lalancette and William Woodall },
+  title           = {Robot Operating System 2: Design, architecture, and uses in
+                  the wild},
+  journal         = {Science Robotics},
+  volume          = 7,
+  number          = 66,
+  pages           = {eabm6074},
+  year            = 2022,
+  doi             = {10.1126/scirobotics.abm6074},
+  URL             =
+                  {https://www.science.org/doi/abs/10.1126/scirobotics.abm6074},
+  eprint          =
+                  {https://www.science.org/doi/pdf/10.1126/scirobotics.abm6074},
+  abstract        = {The next chapter of the robotics revolution is well
+                  underway with the deployment of robots for a broad range of
+                  commercial use cases. Even in a myriad of applications and
+                  environments, there exists a common vocabulary of components
+                  that robots share—the need for a modular, scalable, and
+                  reliable architecture; sensing; planning; mobility; and
+                  autonomy. The Robot Operating System (ROS) was an integral
+                  part of the last chapter, demonstrably expediting robotics
+                  research with freely available components and a modular
+                  framework. However, ROS 1 was not designed with many necessary
+                  production-grade features and algorithms. ROS 2 and its
+                  related projects have been redesigned from the ground up to
+                  meet the challenges set forth by modern robotic systems in new
+                  and exploratory domains at all scales. In this Review, we
+                  highlight the philosophical and architectural changes of ROS 2
+                  powering this new chapter in the robotics revolution. We also
+                  show through case studies the influence ROS 2 and its adoption
+                  has had on accelerating real robot systems to reliable
+                  deployment in an assortment of challenging environments. This
+                  Review describes ROS 2’s design, features, and performance
+                  with four case studies on land, air, sea, and even space.}
 }
