--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96625,10 +96625,8 @@
   pages           = {eabm6074},
   year            = 2022,
   doi             = {10.1126/scirobotics.abm6074},
-  URL             =
-                  {https://www.science.org/doi/abs/10.1126/scirobotics.abm6074},
-  eprint          =
-                  {https://www.science.org/doi/pdf/10.1126/scirobotics.abm6074},
+  URL             = {https://www.science.org/doi/abs/10.1126/scirobotics.abm6074},
+  eprint          = {https://www.science.org/doi/pdf/10.1126/scirobotics.abm6074},
   abstract        = {The next chapter of the robotics revolution is well
                   underway with the deployment of robots for a broad range of
                   commercial use cases. Even in a myriad of applications and
