DCIST review preparaiton

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96649,3 +96649,26 @@
                   Review describes ROS 2’s design, features, and performance
                   with four case studies on land, air, sea, and even space.}
 }
+
+@article{cai2016``zero,
+  title           = {Zero-sum polymatrix games: A generalization of minmax},
+  author          = {Cai, Yang and Candogan, Ozan and Daskalakis, Constantinos
+                  and Papadimitriou, Christos},
+  journal         = {Mathematics of Operations Research},
+  volume          = {41},
+  number          = {2},
+  pages           = {648--655},
+  year            = {2016},
+  publisher       = {INFORMS}
+}
+
+@misc{brown2020combining,
+  title           = {Combining Deep Reinforcement Learning and Search for
+                  Imperfect-Information Games},
+  author          = {Noam Brown and Anton Bakhtin and Adam Lerer and Qucheng
+                  Gong},
+  year            = {2020},
+  eprint          = {2007.13544},
+  archivePrefix   = {arXiv},
+  primaryClass    = {cs.GT}
+}
