--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96513,162 +96513,231 @@
 }
 
 @misc{language-affordance,
-  doi             = {10.48550/ARXIV.2204.01691},
-  url             = {https://arxiv.org/abs/2204.01691},
-  author          = {Ahn, Michael and Brohan, Anthony and Brown, Noah and
-                  Chebotar, Yevgen and Cortes, Omar and David, Byron and Finn,
-                  Chelsea and Gopalakrishnan, Keerthana and Hausman, Karol and
-                  Herzog, Alex and Ho, Daniel and Hsu, Jasmine and Ibarz, Julian
-                  and Ichter, Brian and Irpan, Alex and Jang, Eric and Ruano,
-                  Rosario Jauregui and Jeffrey, Kyle and Jesmonth, Sally and
-                  Joshi, Nikhil J and Julian, Ryan and Kalashnikov, Dmitry and
-                  Kuang, Yuheng and Lee, Kuang-Huei and Levine, Sergey and Lu,
-                  Yao and Luu, Linda and Parada, Carolina and Pastor, Peter and
-                  Quiambao, Jornell and Rao, Kanishka and Rettinghouse, Jarek
-                  and Reyes, Diego and Sermanet, Pierre and Sievers, Nicolas and
-                  Tan, Clayton and Toshev, Alexander and Vanhoucke, Vincent and
-                  Xia, Fei and Xiao, Ted and Xu, Peng and Xu, Sichun and Yan,
-                  Mengyuan},
-  keywords        = {Robotics (cs.RO), Computation and Language (cs.CL), Machine
-                  Learning (cs.LG), FOS: Computer and information sciences, FOS:
-                  Computer and information sciences},
-  title           = {Do As I Can, Not As I Say: Grounding Language in Robotic
-                  Affordances},
-  publisher       = {arXiv},
-  year            = 2022,
-  copyright       = {arXiv.org perpetual, non-exclusive license}
+  doi =          {10.48550/ARXIV.2204.01691},
+  url =          {https://arxiv.org/abs/2204.01691},
+  author =       {Ahn, Michael and Brohan, Anthony and Brown, Noah and
+                  Chebotar, Yevgen and Cortes, Omar and David, Byron
+                  and Finn, Chelsea and Gopalakrishnan, Keerthana and
+                  Hausman, Karol and Herzog, Alex and Ho, Daniel and
+                  Hsu, Jasmine and Ibarz, Julian and Ichter, Brian and
+                  Irpan, Alex and Jang, Eric and Ruano, Rosario
+                  Jauregui and Jeffrey, Kyle and Jesmonth, Sally and
+                  Joshi, Nikhil J and Julian, Ryan and Kalashnikov,
+                  Dmitry and Kuang, Yuheng and Lee, Kuang-Huei and
+                  Levine, Sergey and Lu, Yao and Luu, Linda and
+                  Parada, Carolina and Pastor, Peter and Quiambao,
+                  Jornell and Rao, Kanishka and Rettinghouse, Jarek
+                  and Reyes, Diego and Sermanet, Pierre and Sievers,
+                  Nicolas and Tan, Clayton and Toshev, Alexander and
+                  Vanhoucke, Vincent and Xia, Fei and Xiao, Ted and
+                  Xu, Peng and Xu, Sichun and Yan, Mengyuan},
+  keywords =     {Robotics (cs.RO), Computation and Language (cs.CL),
+                  Machine Learning (cs.LG), FOS: Computer and
+                  information sciences, FOS: Computer and information
+                  sciences},
+  title =        {Do As I Can, Not As I Say: Grounding Language in
+                  Robotic Affordances},
+  publisher =    {arXiv},
+  year =         2022,
+  copyright =    {arXiv.org perpetual, non-exclusive license}
 }
 
 @book{pml1Book,
-  author          = "Kevin P. Murphy",
-  title           = "Probabilistic Machine Learning: An introduction",
-  publisher       = "MIT Press",
-  year            = 2022,
-  url             = "probml.ai"
+  author =       "Kevin P. Murphy",
+  title =        "Probabilistic Machine Learning: An introduction",
+  publisher =    "MIT Press",
+  year =         2022,
+  url =          "probml.ai"
 }
 
 @article{DBLP:journals/corr/abs-2004-11757,
-  author          = {Zequn Qin and Huanyu Wang and Xi Li},
-  title           = {Ultra Fast Structure-aware Deep Lane Detection},
-  journal         = {CoRR},
-  volume          = {abs/2004.11757},
-  year            = {2020},
-  url             = {https://arxiv.org/abs/2004.11757},
-  eprinttype      = {arXiv},
-  eprint          = {2004.11757},
-  timestamp       = {Tue, 28 Apr 2020 16:10:02 +0200},
-  biburl          = {https://dblp.org/rec/journals/corr/abs-2004-11757.bib},
-  bibsource       = {dblp computer science bibliography, https://dblp.org}
+  author =       {Zequn Qin and Huanyu Wang and Xi Li},
+  title =        {Ultra Fast Structure-aware Deep Lane Detection},
+  journal =      {CoRR},
+  volume =       {abs/2004.11757},
+  year =         {2020},
+  url =          {https://arxiv.org/abs/2004.11757},
+  eprinttype =   {arXiv},
+  eprint =       {2004.11757},
+  timestamp =    {Tue, 28 Apr 2020 16:10:02 +0200},
+  biburl =
+                  {https://dblp.org/rec/journals/corr/abs-2004-11757.bib},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
 }
 
 @article{DBLP:journals/corr/abs-2001-03343,
-  author          = {Peixuan Li and Huaici Zhao and Pengfei Liu and Feidao Cao},
-  title           = {{RTM3D:} Real-time Monocular 3D Detection from Object
-                  Keypoints for Autonomous Driving},
-  journal         = {CoRR},
-  volume          = {abs/2001.03343},
-  year            = {2020},
-  url             = {https://arxiv.org/abs/2001.03343},
-  eprinttype      = {arXiv},
-  eprint          = {2001.03343},
-  timestamp       = {Fri, 17 Jan 2020 14:07:30 +0100},
-  biburl          = {https://dblp.org/rec/journals/corr/abs-2001-03343.bib},
-  bibsource       = {dblp computer science bibliography, https://dblp.org}
+  author =       {Peixuan Li and Huaici Zhao and Pengfei Liu and
+                  Feidao Cao},
+  title =        {{RTM3D:} Real-time Monocular 3D Detection from
+                  Object Keypoints for Autonomous Driving},
+  journal =      {CoRR},
+  volume =       {abs/2001.03343},
+  year =         {2020},
+  url =          {https://arxiv.org/abs/2001.03343},
+  eprinttype =   {arXiv},
+  eprint =       {2001.03343},
+  timestamp =    {Fri, 17 Jan 2020 14:07:30 +0100},
+  biburl =
+                  {https://dblp.org/rec/journals/corr/abs-2001-03343.bib},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
 }
 
 @article{DBLP:journals/corr/abs-1802-03515,
-  author          = {Wenhao Ding and Shuaijun Li and Guilin Zhang and Xiangyu
-                  Lei and Huihuan Qian and Yangsheng Xu},
-  title           = {Vehicle Three-Dimensional Pose and Shape Estimation from
-                  Multiple Monocular Vision},
-  journal         = {CoRR},
-  volume          = {abs/1802.03515},
-  year            = {2018},
-  url             = {http://arxiv.org/abs/1802.03515},
-  eprinttype      = {arXiv},
-  eprint          = {1802.03515},
-  timestamp       = {Mon, 13 Aug 2018 16:48:41 +0200},
-  biburl          = {https://dblp.org/rec/journals/corr/abs-1802-03515.bib},
-  bibsource       = {dblp computer science bibliography, https://dblp.org}
+  author =       {Wenhao Ding and Shuaijun Li and Guilin Zhang and
+                  Xiangyu Lei and Huihuan Qian and Yangsheng Xu},
+  title =        {Vehicle Three-Dimensional Pose and Shape Estimation
+                  from Multiple Monocular Vision},
+  journal =      {CoRR},
+  volume =       {abs/1802.03515},
+  year =         {2018},
+  url =          {http://arxiv.org/abs/1802.03515},
+  eprinttype =   {arXiv},
+  eprint =       {1802.03515},
+  timestamp =    {Mon, 13 Aug 2018 16:48:41 +0200},
+  biburl =
+                  {https://dblp.org/rec/journals/corr/abs-1802-03515.bib},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
 }
 
 @InProceedings{Wang_2019_CVPR,
-  author          = {Wang, He and Sridhar, Srinath and Huang, Jingwei and
-                  Valentin, Julien and Song, Shuran and Guibas, Leonidas J.},
-  title           = {Normalized Object Coordinate Space for Category-Level 6D
-                  Object Pose and Size Estimation},
-  booktitle       = {The IEEE Conference on Computer Vision and Pattern
+  author =       {Wang, He and Sridhar, Srinath and Huang, Jingwei and
+                  Valentin, Julien and Song, Shuran and Guibas,
+                  Leonidas J.},
+  title =        {Normalized Object Coordinate Space for
+                  Category-Level 6D Object Pose and Size Estimation},
+  booktitle =    {The IEEE Conference on Computer Vision and Pattern
                   Recognition (CVPR)},
-  month           = {June},
-  year            = 2019
+  month =        {June},
+  year =         2019
 }
 
 @inproceedings{mozos2007labels,
-  title           = {From labels to semantics: An integrated system for
-                  conceptual spatial representations of indoor environments for
-                  mobile robots},
-  author          = {Mozos, Oscar Mart{\i}nez and Jensfelt, Patric and Zender,
-                  Hendrik and Kruijff, Geert-Jan M and Burgard, Wolfram},
-  booktitle       = {ICRA Workshop: Semantic Information in Robotics},
-  year            = {2007},
-  organization    = {Citeseer}
+  title =        {From labels to semantics: An integrated system for
+                  conceptual spatial representations of indoor
+                  environments for mobile robots},
+  author =       {Mozos, Oscar Mart{\i}nez and Jensfelt, Patric and
+                  Zender, Hendrik and Kruijff, Geert-Jan M and
+                  Burgard, Wolfram},
+  booktitle =    {ICRA Workshop: Semantic Information in Robotics},
+  year =         {2007},
+  organization = {Citeseer}
 }
 
 @article{ros2,
-  author          = {Steven Macenski and Tully Foote and Brian Gerkey and Chris
-                  Lalancette and William Woodall },
-  title           = {Robot Operating System 2: Design, architecture, and uses in
-                  the wild},
-  journal         = {Science Robotics},
-  volume          = 7,
-  number          = 66,
-  pages           = {eabm6074},
-  year            = 2022,
-  doi             = {10.1126/scirobotics.abm6074},
-  URL             = {https://www.science.org/doi/abs/10.1126/scirobotics.abm6074},
-  eprint          = {https://www.science.org/doi/pdf/10.1126/scirobotics.abm6074},
-  abstract        = {The next chapter of the robotics revolution is well
-                  underway with the deployment of robots for a broad range of
-                  commercial use cases. Even in a myriad of applications and
-                  environments, there exists a common vocabulary of components
-                  that robots share—the need for a modular, scalable, and
-                  reliable architecture; sensing; planning; mobility; and
-                  autonomy. The Robot Operating System (ROS) was an integral
-                  part of the last chapter, demonstrably expediting robotics
-                  research with freely available components and a modular
-                  framework. However, ROS 1 was not designed with many necessary
-                  production-grade features and algorithms. ROS 2 and its
-                  related projects have been redesigned from the ground up to
-                  meet the challenges set forth by modern robotic systems in new
-                  and exploratory domains at all scales. In this Review, we
-                  highlight the philosophical and architectural changes of ROS 2
-                  powering this new chapter in the robotics revolution. We also
-                  show through case studies the influence ROS 2 and its adoption
-                  has had on accelerating real robot systems to reliable
-                  deployment in an assortment of challenging environments. This
-                  Review describes ROS 2’s design, features, and performance
-                  with four case studies on land, air, sea, and even space.}
+  author =       {Steven Macenski and Tully Foote and Brian Gerkey and
+                  Chris Lalancette and William Woodall },
+  title =        {Robot Operating System 2: Design, architecture, and
+                  uses in the wild},
+  journal =      {Science Robotics},
+  volume =       7,
+  number =       66,
+  pages =        {eabm6074},
+  year =         2022,
+  doi =          {10.1126/scirobotics.abm6074},
+  URL =
+                  {https://www.science.org/doi/abs/10.1126/scirobotics.abm6074},
+  eprint =
+                  {https://www.science.org/doi/pdf/10.1126/scirobotics.abm6074},
+  abstract =     {The next chapter of the robotics revolution is well
+                  underway with the deployment of robots for a broad
+                  range of commercial use cases. Even in a myriad of
+                  applications and environments, there exists a common
+                  vocabulary of components that robots share—the need
+                  for a modular, scalable, and reliable architecture;
+                  sensing; planning; mobility; and autonomy. The Robot
+                  Operating System (ROS) was an integral part of the
+                  last chapter, demonstrably expediting robotics
+                  research with freely available components and a
+                  modular framework. However, ROS 1 was not designed
+                  with many necessary production-grade features and
+                  algorithms. ROS 2 and its related projects have been
+                  redesigned from the ground up to meet the challenges
+                  set forth by modern robotic systems in new and
+                  exploratory domains at all scales. In this Review,
+                  we highlight the philosophical and architectural
+                  changes of ROS 2 powering this new chapter in the
+                  robotics revolution. We also show through case
+                  studies the influence ROS 2 and its adoption has had
+                  on accelerating real robot systems to reliable
+                  deployment in an assortment of challenging
+                  environments. This Review describes ROS 2’s design,
+                  features, and performance with four case studies on
+                  land, air, sea, and even space.}
 }
 
 @article{cai2016``zero,
-  title           = {Zero-sum polymatrix games: A generalization of minmax},
-  author          = {Cai, Yang and Candogan, Ozan and Daskalakis, Constantinos
-                  and Papadimitriou, Christos},
-  journal         = {Mathematics of Operations Research},
-  volume          = {41},
-  number          = {2},
-  pages           = {648--655},
-  year            = {2016},
-  publisher       = {INFORMS}
+  title =        {Zero-sum polymatrix games: A generalization of
+                  minmax},
+  author =       {Cai, Yang and Candogan, Ozan and Daskalakis,
+                  Constantinos and Papadimitriou, Christos},
+  journal =      {Mathematics of Operations Research},
+  volume =       {41},
+  number =       {2},
+  pages =        {648--655},
+  year =         {2016},
+  publisher =    {INFORMS}
 }
 
 @misc{brown2020combining,
-  title           = {Combining Deep Reinforcement Learning and Search for
+  title =        {Combining Deep Reinforcement Learning and Search for
                   Imperfect-Information Games},
-  author          = {Noam Brown and Anton Bakhtin and Adam Lerer and Qucheng
-                  Gong},
-  year            = {2020},
-  eprint          = {2007.13544},
-  archivePrefix   = {arXiv},
-  primaryClass    = {cs.GT}
+  author =       {Noam Brown and Anton Bakhtin and Adam Lerer and
+                  Qucheng Gong},
+  year =         2020,
+  eprint =       {2007.13544},
+  primaryClass = {cs.GT}
+}
+
+@Article{zheng22:build,
+  author =       {T. Zheng and G. Zhang and L. Han and L. Xu and
+                  L. Fang},
+  title =        {Building{F}usion: Semantic-Aware Structural
+                  Building-Scale 3D Reconstructoin},
+  journal =      {{IEEE} Trans. on {PAMI}},
+  date =         {May 2022},
+  key =          {May},
+  volume =       44,
+  number =       5,
+  month =        {May},
+  pages =        {2328--2345}
+}
+
+@Article{oprea22,
+  author =       {A. Oprea and P. Martinez-Gonzales and
+                  A. Garcia-Garcia and J. Castro-Vargas and
+                  S. Orts-Escolano and J. Garcia-Rodriguez and
+                  A. Argyros},
+  title =        {A review of deep-learning techniques for video
+                  prediction},
+  journaltitle = {Trends and Foundations in Robotics},
+  volume =       44,
+  number =       6,
+  month =        {June},
+  pages =        {2806--2826},
+  year =         2022
+}
+
+@inproceedings{saycan2022arxiv,
+  title =        {Do As I Can and Not As I Say: Grounding Language in
+                  Robotic Affordances},
+  author =       {Michael Ahn and Anthony Brohan and Noah Brown and
+                  Yevgen Chebotar and Omar Cortes and Byron David and
+                  Chelsea Finn and Keerthana Gopalakrishnan and Karol
+                  Hausman and Alex Herzog and Daniel Ho and Jasmine
+                  Hsu and Julian Ibarz and Brian Ichter and Alex Irpan
+                  and Eric Jang and Rosario Jauregui Ruano and Kyle
+                  Jeffrey and Sally Jesmonth and Nikhil Joshi and Ryan
+                  Julian and Dmitry Kalashnikov and Yuheng Kuang and
+                  Kuang-Huei Lee and Sergey Levine and Yao Lu and
+                  Linda Luu and Carolina Parada and Peter Pastor and
+                  Jornell Quiambao and Kanishka Rao and Jarek
+                  Rettinghouse and Diego Reyes and Pierre Sermanet and
+                  Nicolas Sievers and Clayton Tan and Alexander Toshev
+                  and Vincent Vanhoucke and Fei Xia and Ted Xiao and
+                  Peng Xu and Sichun Xu and Mengyuan Yan},
+  booktitle =    {arXiv preprint arXiv:2204.01691},
+  year =         {2022}
 }
