--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96739,5 +96739,65 @@
                   and Vincent Vanhoucke and Fei Xia and Ted Xiao and
                   Peng Xu and Sichun Xu and Mengyuan Yan},
   booktitle =    {arXiv preprint arXiv:2204.01691},
-  year =         {2022}
+  year =         2022
+}
+
+@article{article,
+  author          = {Campbell, Adam and Wu, Annie},
+  year            = {2011},
+  month           = {03},
+  pages           = {317-355},
+  title           = {Multi-Agent Role Allocation: Issues, Approaches, and
+                  Multiple Perspectives},
+  volume          = {22},
+  journal         = {Autonomous Agents and Multi-Agent Systems},
+  doi             = {10.1007/s10458-010-9127-4}
+}
+
+@article{rizk2019cooperative,
+  title           = {Cooperative heterogeneous multi-robot systems: A survey},
+  author          = {Rizk, Yara and Awad, Mariette and Tunstel, Edward W},
+  journal         = {ACM Computing Surveys (CSUR)},
+  volume          = {52},
+  number          = {2},
+  pages           = {1--31},
+  year            = {2019},
+  publisher       = {ACM New York, NY, USA}
+}
+
+@misc{ahn22:saycan,
+  doi             = {10.48550/ARXIV.2204.01691},
+  url             = {https://arxiv.org/abs/2204.01691},
+  author          = {Ahn, Michael and Brohan, Anthony and Brown, Noah and
+                     Chebotar, Yevgen and Cortes, Omar and David, Byron and Finn,
+                     Chelsea and Gopalakrishnan, Keerthana and Hausman, Karol and
+                     Herzog, Alex and Ho, Daniel and Hsu, Jasmine and Ibarz, Julian
+                     and Ichter, Brian and Irpan, Alex and Jang, Eric and Ruano,
+                     Rosario Jauregui and Jeffrey, Kyle and Jesmonth, Sally and
+                     Joshi, Nikhil J and Julian, Ryan and Kalashnikov, Dmitry and
+                     Kuang, Yuheng and Lee, Kuang-Huei and Levine, Sergey and Lu,
+                     Yao and Luu, Linda and Parada, Carolina and Pastor, Peter and
+                     Quiambao, Jornell and Rao, Kanishka and Rettinghouse, Jarek
+                     and Reyes, Diego and Sermanet, Pierre and Sievers, Nicolas and
+                     Tan, Clayton and Toshev, Alexander and Vanhoucke, Vincent and
+                     Xia, Fei and Xiao, Ted and Xu, Peng and Xu, Sichun and Yan,
+                     Mengyuan},
+  keywords        = {Robotics (cs.RO), Computation and Language (cs.CL), Machine
+                     Learning (cs.LG), FOS: Computer and information sciences, FOS:
+                     Computer and information sciences},
+  title           = {Do As I Can, Not As I Say: Grounding Language in Robotic
+                     Affordances},
+  publisher       = {arXiv},
+  year            = 2022,
+  copyright       = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{kovach2015hypergame,
+  title           = {Hypergame theory: a model for conflict, misperception, and
+                     deception},
+  author          = {Kovach, Nicholas S and Gibson, Alan S and Lamont, Gary B},
+  journal         = {Game Theory},
+  volume          = {2015},
+  year            = {2015},
+  publisher       = {Hindawi}
 }
