--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96801,3 +96801,27 @@
   year            = {2015},
   publisher       = {Hindawi}
 }
+
+@inproceedings {ROSTF,
+  title           = {{TF}: The transform library},
+  booktitle       = {Technologies for Practical Robot Applications (TePRA), 2013
+                     IEEE International Conference on},
+  series          = {Open-Source Software workshop},
+  year            = {2013},
+  month           = {April},
+  pages           = {1-6},
+  author          = {Foote, Tully},
+  doi             = {10.1109/TePRA.2013.6556373},
+  ISSN            = {2325-0526}
+}
+
+@incollection{Chakraborty_2022_NLP,
+  author          = {Devjyoti Chakraborty},
+  title           = {Introduction to Natural Language Processing {(NLP)}},
+  booktitle       = {PyImageSearch},
+  editor          = {Puneet Chugh and Aritra Roy Gosthipaty and Jon Haase and
+                     Susan Huot and Kseniia Kidriavsteva and Ritwik Raha and
+                     Abhishek Thanki},
+  year            = {2022},
+  note            = {https://pyimg.co/60xld},
+}
