--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96825,3 +96825,37 @@
   year            = {2022},
   note            = {https://pyimg.co/60xld},
 }
+
+
+@INPROCEEDINGS {Argoverse2,
+  author          = {Benjamin Wilson and William Qi and Tanmay Agarwal and John
+                     Lambert and Jagjeet Singh and Siddhesh Khandelwal and Bowen
+                     Pan and Ratnesh Kumar and Andrew Hartnett and Jhony Kaesemodel
+                     Pontes and Deva Ramanan and Peter Carr and James Hays},
+  title           = {Argoverse 2: Next Generation Datasets for Self-driving
+                     Perception and Forecasting},
+  booktitle       = {Proceedings of the Neural Information Processing Systems
+                     Track on Datasets and Benchmarks (NeurIPS Datasets and
+                     Benchmarks 2021)},
+  year            = {2021}
+}
+
+@INPROCEEDINGS {TrustButVerify,
+  author          = {John Lambert and James Hays},
+  title           = {Trust, but Verify: Cross-Modality Fusion for HD Map Change
+                     Detection},
+  booktitle       = {Proceedings of the Neural Information Processing Systems
+                     Track on Datasets and Benchmarks (NeurIPS Datasets and
+                     Benchmarks 2021)},
+  year            = {2021}
+}
+
+@article{newbury2022deep,
+  title           = {Deep Learning Approaches to Grasp Synthesis: A Review},
+  author          = {Newbury, Rhys and Gu, Morris and Chumbley, Lachlan and
+                     Mousavian, Arsalan and Eppner, Clemens and Leitner, J{\"u}rgen
+                     and Bohg, Jeannette and Morales, Antonio and Asfour, Tamim and
+                     Kragic, Danica and Cosgun, Akansel},
+  journal         = {arXiv preprint arXiv:2207.02556},
+  year            = {2022}
+}
