--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96687,9 +96687,9 @@
   author =       {Noam Brown and Anton Bakhtin and Adam Lerer and
                   Qucheng Gong},
   year =         2020,
-  eprint =       {2007.13544},
-  primaryClass = {cs.GT}
-}
+    eprint =       {2007.13544},
+    primaryClass = {cs.GT}
+  }
 
 @Article{zheng22:build,
   author =       {T. Zheng and G. Zhang and L. Han and L. Xu and
@@ -96828,34 +96828,93 @@
 
 
 @INPROCEEDINGS {Argoverse2,
-  author          = {Benjamin Wilson and William Qi and Tanmay Agarwal and John
-                     Lambert and Jagjeet Singh and Siddhesh Khandelwal and Bowen
-                     Pan and Ratnesh Kumar and Andrew Hartnett and Jhony Kaesemodel
-                     Pontes and Deva Ramanan and Peter Carr and James Hays},
-  title           = {Argoverse 2: Next Generation Datasets for Self-driving
-                     Perception and Forecasting},
-  booktitle       = {Proceedings of the Neural Information Processing Systems
-                     Track on Datasets and Benchmarks (NeurIPS Datasets and
-                     Benchmarks 2021)},
-  year            = {2021}
+  author =       {Benjamin Wilson and William Qi and Tanmay Agarwal
+                  and John Lambert and Jagjeet Singh and Siddhesh
+                  Khandelwal and Bowen Pan and Ratnesh Kumar and
+                  Andrew Hartnett and Jhony Kaesemodel Pontes and Deva
+                  Ramanan and Peter Carr and James Hays},
+  title =        {Argoverse 2: Next Generation Datasets for
+                  Self-driving Perception and Forecasting},
+  booktitle =    {Proceedings of the Neural Information Processing
+                  Systems Track on Datasets and Benchmarks (NeurIPS
+                  Datasets and Benchmarks 2021)},
+  year =         {2021}
 }
 
 @INPROCEEDINGS {TrustButVerify,
-  author          = {John Lambert and James Hays},
-  title           = {Trust, but Verify: Cross-Modality Fusion for HD Map Change
-                     Detection},
-  booktitle       = {Proceedings of the Neural Information Processing Systems
-                     Track on Datasets and Benchmarks (NeurIPS Datasets and
-                     Benchmarks 2021)},
-  year            = {2021}
+  author =       {John Lambert and James Hays},
+  title =        {Trust, but Verify: Cross-Modality Fusion for HD Map
+                  Change Detection},
+  booktitle =    {Proceedings of the Neural Information Processing
+                  Systems Track on Datasets and Benchmarks (NeurIPS
+                  Datasets and Benchmarks 2021)},
+  year =         2021
 }
 
 @article{newbury2022deep,
-  title           = {Deep Learning Approaches to Grasp Synthesis: A Review},
-  author          = {Newbury, Rhys and Gu, Morris and Chumbley, Lachlan and
-                     Mousavian, Arsalan and Eppner, Clemens and Leitner, J{\"u}rgen
-                     and Bohg, Jeannette and Morales, Antonio and Asfour, Tamim and
-                     Kragic, Danica and Cosgun, Akansel},
-  journal         = {arXiv preprint arXiv:2207.02556},
-  year            = {2022}
+  title =        {Deep Learning Approaches to Grasp Synthesis: A
+                  Review},
+  author =       {Newbury, Rhys and Gu, Morris and Chumbley, Lachlan
+                  and Mousavian, Arsalan and Eppner, Clemens and
+                  Leitner, J{\"u}rgen and Bohg, Jeannette and Morales,
+                  Antonio and Asfour, Tamim and Kragic, Danica and
+                  Cosgun, Akansel},
+  journal =      {arXiv preprint arXiv:2207.02556},
+  year =         2022
+}
+
+
+@book{pml2Book,
+  author =       "Kevin P. Murphy",
+  title =        "Probabilistic Machine Learning: Advanced Topics",
+  publisher =    "MIT Press",
+  year =         2023,
+  url =          "probml.ai"
+}
+
+@book{prince2022,
+  author =       "Simon J.D. Prince",
+  title =        "Understanding Deep Learning",
+  publisher =    "MIT Press",
+  year =         2022,
+  url =          "https://udlbook.github.io/udlbook/"
+}
+
+@article{DBLP:journals/corr/abs-2010-13166,
+  publtype =     {informal},
+  author =       {Xin Wang and Yudong Chen and Wenwu Zhu},
+  title =        {A Comprehensive Survey on Curriculum Learning},
+  year =         2020,
+  cdate =        1577836800000,
+  journal =      {CoRR},
+  volume =       {abs/2010.13166},
+  url =          {https://arxiv.org/abs/2010.13166}
+}
+
+@article{wang2021survey,
+  title =        {A survey on curriculum learning},
+  author =       {Wang, Xin and Chen, Yudong and Zhu, Wenwu},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  year =         {2021},
+  publisher =    {IEEE}
+}
+
+@article{zanon2020safe,
+  title =        {Safe reinforcement learning using robust MPC},
+  author =       {Zanon, Mario and Gros, S{\'e}bastien},
+  journal =      {IEEE Transactions on Automatic Control},
+  volume =       {66},
+  number =       {8},
+  pages =        {3638--3652},
+  year =         {2020},
+  publisher =    {IEEE}
+}
+
+@article{lin2021optimal,
+  title =        {Optimal patrol of a perimeter},
+  author =       {Lin, Kyle Y},
+  journal =      {Operations Research},
+  year =         2021,
+  publisher =    {INFORMS}
 }
