November Push / Correll Book, TRO, ...

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96918,3 +96918,36 @@
   year =         2021,
   publisher =    {INFORMS}
 }
+
+@ARTICLE{9770125,
+  author =       {Yuan, Kaiwen and Ding, Li and Abdelfattah, Mazen and
+                  Wang, Z. Jane},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {LiCaS3: A Simple LiDAR–Camera Self-Supervised
+                  Synchronization Method},
+  year =         2022,
+  volume =       38,
+  number =       5,
+  pages =        {3203-3218},
+  doi =          {10.1109/TRO.2022.3167455}
+}
+
+
+@Book{hennig22,
+  author =       {Philipp Hennig and Michael Osborne and Hans
+                  Kersting},
+  title =        {Probabilistic Numerics},
+  publisher =    {Cambridge University Press},
+  year =         2022,
+  address =      {Cambridge, UK}
+}
+
+@book{correll2022introduction,
+  title =        {Introduction to Autonomous Robots: Mechanisms,
+                  Sensors, Actuators, and Algorithms},
+  author =       {Correll, Nikolaus and Hayes, Bradley, and Heckman,
+                  Christoffer, and Roncone, Alessandro},
+  year =         2022,
+  edition =      {1st},
+  publisher =    {MIT Press, Cambridge, MA}
+}
