Monthly update January 2023

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96951,3 +96951,38 @@
   edition =      {1st},
   publisher =    {MIT Press, Cambridge, MA}
 }
+
+@misc{gervet22:navig_objec_real_world,
+  doi =		 {10.48550/ARXIV.2212.00922},
+  url =		 {https://arxiv.org/abs/2212.00922},
+  author =	 {Gervet, Theophile and Chintala, Soumith and Batra,
+                  Dhruv and Malik, Jitendra and Chaplot, Devendra
+                  Singh},
+  keywords =	 {Robotics (cs.RO), Computer Vision and Pattern
+                  Recognition (cs.CV), Machine Learning (cs.LG), FOS:
+                  Computer and information sciences, FOS: Computer and
+                  information sciences},
+  title =	 {Navigating to Objects in the Real World},
+  publisher =	 {arXiv},
+  year =	 2022,
+  copyright =	 {Creative Commons Attribution 4.0 International}
+}
+
+@Article{skocaj08:ipca,
+  author          = {Danijel Skocaj and Ales Leonardis},
+  title           = {Incremental and robust learning of subspace
+                  representations},
+  journaltitle    = {Image and Vision Computing},
+  date            = 2008,
+  volume          = 26,
+  pages           = {27--38}
+}
+
+@inproceedings{Dosovitskiy17,
+  title           = { {CARLA}: {An} Open Urban Driving Simulator},
+  author          = {Alexey Dosovitskiy and German Ros and Felipe Codevilla and
+                     Antonio Lopez and Vladlen Koltun},
+  booktitle       = {Proceedings of the 1st Annual Conference on Robot Learning},
+  pages           = {1--16},
+  year            = 2017
+}
