--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96953,19 +96953,17 @@
 }
 
 @misc{gervet22:navig_objec_real_world,
-  doi =		 {10.48550/ARXIV.2212.00922},
-  url =		 {https://arxiv.org/abs/2212.00922},
-  author =	 {Gervet, Theophile and Chintala, Soumith and Batra,
-                  Dhruv and Malik, Jitendra and Chaplot, Devendra
-                  Singh},
-  keywords =	 {Robotics (cs.RO), Computer Vision and Pattern
-                  Recognition (cs.CV), Machine Learning (cs.LG), FOS:
-                  Computer and information sciences, FOS: Computer and
-                  information sciences},
-  title =	 {Navigating to Objects in the Real World},
-  publisher =	 {arXiv},
-  year =	 2022,
-  copyright =	 {Creative Commons Attribution 4.0 International}
+  doi             = {10.48550/ARXIV.2212.00922},
+  url             = {https://arxiv.org/abs/2212.00922},
+  author          = {Gervet, Theophile and Chintala, Soumith and Batra, Dhruv
+                  and Malik, Jitendra and Chaplot, Devendra Singh},
+  keywords        = {Robotics (cs.RO), Computer Vision and Pattern Recognition
+                  (cs.CV), Machine Learning (cs.LG), FOS: Computer and
+                  information sciences, FOS: Computer and information sciences},
+  title           = {Navigating to Objects in the Real World},
+  publisher       = {arXiv},
+  year            = 2022,
+  copyright       = {Creative Commons Attribution 4.0 International}
 }
 
 @Article{skocaj08:ipca,
@@ -96985,4 +96983,24 @@
   booktitle       = {Proceedings of the 1st Annual Conference on Robot Learning},
   pages           = {1--16},
   year            = 2017
+}
+
+@INPROCEEDINGS{6426515,
+  author          = {Zhu, Quanyan and Clark, Andrew and Poovendran, Radha and
+                  Başar, Tamer},
+  booktitle       = {2012 IEEE 51st IEEE Conference on Decision and Control
+                  (CDC)},
+  title           = {Deceptive routing games},
+  year            = 2012,
+  pages           = {2704-2711},
+  doi             = {10.1109/CDC.2012.6426515}
+}
+
+@incollection{sayin2021deception,
+  title           = {Deception-as-defense framework for cyber-physical systems},
+  author          = {Sayin, Muhammed O and Ba{\c{s}}ar, Tamer},
+  booktitle       = {Safety, Security and Privacy for Cyber-Physical Systems},
+  pages           = {287--317},
+  year            = {2021},
+  publisher       = {Springer}
 }
